<resources>
    <string name="app_name">MIFUCAM</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_informations">Informations</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string name="menu_network">Mise en place du réseau</string>
    <string name="menu_produit">Mise en place des produits</string>
    <string name="menu_operation_externe">Oprérations externes</string>
    <string name="menu_activation_zone_activite">Zones d\'activités</string>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liste_des_entrees_fragment">Liste des mouvements en entrée</string>
    <string name="liste_des_sorties_fragment">Liste des mouvements en sortie</string>
    <string name="liste_des_regulations_fragment">Liste des mouvements en regulation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_photos">Mise en place des produits bancaires</string>
    <string name="nav_home">Mise en place des caisses</string>
    <string name="nav_movies">Création des administrateurs de caisses</string>
    <string name="nav_movies1">Paramétrages des pièces et frais </string>
    <string name="nav_movies2">Paramétrages des types de membres </string>
    <string name="nav_movies3">Pré-paramétrages </string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Zones d\'activités</string>
    <string name="nav_about_us">A propos de nous</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email: (*)</string>
    <string name="hint_password">Password: (*)</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Entrer votre nom complet</string>
    <string name="err_msg_login">Entrer votre identifiant</string>
    <string name="err_msg_montant_demarrage">Entrer le montant de démarrage</string>
    <string name="err_msg_montant_mise">Entrer le montant de la mise</string>
    <string name="err_msg_date_debut">Entrer la date de début de l\'échéance</string>
    <string name="err_msg_date_debut_anterieure">La date de début doit être antérieure à la date de fin</string>
    <string name="err_msg_date_debut_egale">La date de début doit être différente de la date de fin</string>
    <string name="err_msg_date_fin">Entrer la date de fin de l\'échéance</string>
    <string name="err_msg_montant_mise_invalide">Entrer le montant de la mise conforme au paramétrage du produit</string>
    <string name="err_msg_num_manuel">Entrer un numéro manuel</string>
    <string name="err_msg_num_dossier">Entrer un numéro de dossier</string>
    <string name="err_msg_CpNbUnites">Entrer le nombre d\'échéances</string>
    <string name="err_msg_email">Entrer une adresse email valide!</string>
    <string name="err_msg_password">Entrer votre mot de passe</string>
    <string name="hint_localite_caisse">Localité</string>
    <string name="hint_num_agrement">Numéro d\'agrément Minfi</string>
    <string name="hint_NumAgremCobac">Numéro de Décision Cobac</string>
    <string name="hint_NumAgremCNC">Numéro CNC</string>
    <string name="hint_date_agrement">Date d\'agrément Minfi:</string>
    <string name="hint_DatAgremCobac">Date de Décision Cobac:</string>
    <string name="hint_DatAgremCNC">Date CNC:</string>
    <string name="hint_date_debut_caisse">Date de debut des activités</string>
    <string name="hint_adresse">Adresse: (*)</string>
    <string name="hint_telephone1">Téléphone 1*</string>
    <string name="hint_telephone2">Téléphone 2</string>
    <string name="hint_telephone3">Téléphone 3</string>
    <string name="hint_nomPCA">Nom du PCA :</string>
    <string name="hint_nomVPCA">Nom du vice PCA:</string>
    <string name="hint_nomDG">Nom du DG:</string>
    <string name="hint_denominationCx_caisse">Dénomination</string>
    <string name="hint_nomCx_user">Caisse :</string>
    <string name="hint_profil_user">Profil: (*)</string>
    <string name="hint_Nom_user">Nom:(*)</string>
    <string name="hint_Prenom_user">Prénom:</string>
    <string name="hint_login_user">Login : (*)</string>
    <string name="hint_confirm_password">Confirmer votre mot de passe: (*)</string>
    <string name="hint_sigle_of">Sigle :</string>
    <string name="hint_denomination">Dénomination</string>
    <string name="hint_BP">Boite postale :</string>
    <string name="hint_ville">Ville :</string>
    <string name="hint_pays">Pays :</string>
    <string name="hint_siege_of">Siège :</string>
    <string name="btn_update_of">ENREGISTRER</string>
    <string name="hint_nomEpargne_of">EPARGNE/DEPOT</string>
    <string name="choose">Choisir</string>
    <string name="my_hint">Choisir votre caisse (*)</string>
    <string name="my_products">Choisir vos produits</string>
    <string name="my_locality">Choisir votre localité</string>
    <string name="my_guichet">Choisir votre guichet: (*)</string>
    <string name="produit_eav">Produit EAV</string>
    <string name="produit_eap">Produit EAP</string>
    <string name="produit_eat">Produit EAT</string>
    <string name="produit_dav">Produit DAV</string>
    <string name="produit_dap">Produit DAP</string>
    <string name="produit_dat">Produit DAT</string>
    <string name="produit_cc">Produit compte courant</string>
    <string name="objet_credit">Objet crédit</string>
    <string name="comite_credit">Comité de crédit</string>
    <string name="produit_credit">Produit Crédit</string>
    <string name="produit_transfert_classique">Produit Transfert interne</string>
    <string name="produit_transfert_to_mtn">Produit Transfert vers MTN</string>
    <string name="produit_transfert_to_orange">Produit Transfert vers ORANGE</string>
    <string name="produit_transfert_to_eu">Produit Transfert vers EXPRESS UNION</string>
    <string name="op_ext">Opérations externes</string>
    <string name="title_activity_caisse">Gestion des caisses</string>
    <string name="tab_text_1">Créer une caisse</string>
    <string name="tab_text_2">Liste des caisses</string>
    <string name="title_activity_users_caisse">Responsables de caisses</string>
    <string name="tab_title_create_user_caisse">Créer un utilisateur</string>
    <string name="tab_title_list_user_caisse">Liste des utilisateurs</string>
    <string name="title_activity_guichet">Gestion des guichets</string>
    <string name="tab_title_create_guichet">Créer un guichet</string>
    <string name="nav_create_guichet">Menu</string>
    <string name="nav_create_produit">Mise en place des produits</string>
    <string name="nav_create_user_on_guichet">Ajouter des usagers</string>
    <string name="nav_parametrage_general_caisse">Paramétrage général</string>
    <string name="hint_Libelle_objet_credit">Libellé Objet de crédit:</string>
    <string name="hint_Details_objet_credit">Détails Objet de crédit:</string>
    <string name="btn_enregistrer">ENREGISTRER</string>
    <string name="btn_supprimer">SUPPRIMER</string>
    <string name="hint_code_objet_credit">Code objet de crédit:</string>
    <string name="btn_annuler">ANNULER</string>
    <string name="action_all">Tous</string>
    <string name="action_demande_de_retrait">Demande de retrait</string>
    <string name="action_paiement_cheque">Paiement chèque</string>
    <string name="action_transfert_solde_mensuel">Transfert solde mensuel</string>
    <string name="action_demande_de_chequier">Demande de chéquier</string>
    <string name="action_ouverture_de_journee">Ouverture de journée</string>
    <string name="action_membre">MEMBRE</string>
    <string name="action_usager">USAGER</string>
    <string name="action_salarie">SALARIE</string>
    <string name="action_affilie">AFFILIE COLLECTE</string>
    <string name="action_entreprise">ENTREPRISE</string>
    <string name="action_gic">GIC</string>
    <string name="action_cooperative">COOPERATIVE</string>
    <string name="action_association">ASSOCIATION</string>
    <string name="action_groupe_jeune">GROUPE JEUNE</string>
    <string name="action_groupe_femme">GROUPE FEMME</string>
    <string name="action_groupe_homme">GROUPE HOMME</string>
    <string name="action_groupe_mixte">GROUPE MIXTE</string>
    <string name="action_organisation_paysanne">ORGANISATION PAYSANNE</string>
    <string name="action_situation_guichet">Situation du guichet</string>
    <string name="action_interets">Interêts</string>
    <string name="action_brouillard_de_caisse">Brouillard de caisse</string>
    <string name="action_penalites">Penalités</string>
    <string name="action_cloturer_la_journee">Cloturer la journée</string>
    <string name="action_transfert_envoie">Envoyer de l\'argent</string>
    <string name="action_transfert_retrait">Retirer de l\'argent</string>
    <string name="action_transfert_transactions">Les transactions</string>
    <string name="action_operation_externe">Opérations externes</string>
    <string name="action_divers">Opérations diverses</string>
    <string name="action_add_vente_produit">Vente Produits</string>
    <string name="action_add_operation_externe">Nouvelle Opération</string>
    <string name="action_list_operation_externe">Liste des Opérations</string>
    <string name="action_cotisations_annuelle">Cotisations annuelle</string>
    <string name="action_jour_anterieur">Jour antérieur</string>
    <string name="action_collecte_journaliere">Collecte journalière</string>
    <string name="action_nouveaux_adherent">Nouveaux adhérents</string>
    <string name="action_remboursements">Remboursements</string>
    <string name="action_validation_dette_hors_bilan">Validation Dette Hors bilan</string>
    <string name="action_paiement_dette_hors_bilan">Paiement Dette Hors bilan</string>
    <string name="action_transfert">Transfert</string>
    <string name="action_person_add">Ajouter un adherent</string>
    <string name="action_etape_suivante">Etape suivante</string>
    <string name="action_decouvert">Découvert</string>
    <string name="action_facilite_caisse">Facilité de caisse</string>
    <string name="action_decouvert_permanent">Découvert Permanent</string>
    <string name="action_modification_decouvert">Modification Découvert</string>
    <string name="action_credit">Crédit</string>
    <string name="action_reechelonnement_credit">Re-échelonnement Echéances crédit</string>
    <string name="action_remise_sur_interet">Remise sur intérêt</string>
    <string name="action_validation_dette_hors_bilan_decouvert">Validation de la dette hors bilan du découvert</string>
    <string name="action_validation_dette_hors_bilan_credit">Validation de la dette hors bilan du crédit</string>
    <string name="action_statut_to_affect">Statuts à affecter à la caisse</string>
    <string name="action_statut_already_affect">Statuts de crédit déjà affectés</string>
    <string name="action_membre_to_affect_gx">Membre à affecter au guichet</string>
    <string name="action_membre_already_affect_gx">Membres déjà affectés au guichet</string>
</resources>