<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

<!--    <item-->
<!--        android:id="@+id/action_search"-->
<!--        android:title="@string/action_search"-->
<!--        android:orderInCategory="100"-->
<!--        android:icon="@drawable/ic_action_search"-->
<!--        app:showAsAction="ifRoom"-->

<!--        />-->
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_person_add"
        android:title="@string/action_person_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_person_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_situation_guichet"
        android:title="@string/action_situation_guichet"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_brouillard_de_caisse"
        android:orderInCategory="100"
        android:title="@string/action_brouillard_de_caisse"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_nouveaux_adherent"
        android:orderInCategory="100"
        android:title="@string/action_nouveaux_adherent"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_transfert"
        android:visible="true"
        android:orderInCategory="100"
        android:titleCondensed="@string/action_transfert"
        android:title="@string/action_transfert"
        android:enabled="true">
        <menu>
            <item
                android:id="@+id/action_transfert_envoie"
                android:title="@string/action_transfert_envoie">
            </item>
            <item
                android:id="@+id/action_transfert_retrait"
                android:title="@string/action_transfert_retrait">
            </item>
            <item
                android:id="@+id/action_transfert_transactions"
                android:title="@string/action_transfert_transactions">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/action_operation_externe"
        android:visible="true"
        android:orderInCategory="100"
        android:titleCondensed="@string/action_operation_externe"
        android:title="@string/action_operation_externe"
        android:enabled="true">
        <menu>
            <item
                android:id="@+id/action_add_operation_externe"
                android:title="@string/action_add_operation_externe">
            </item>
            <item
                android:id="@+id/action_list_operation_externe"
                android:title="@string/action_list_operation_externe">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/action_cotisations_annuelle"
        android:orderInCategory="100"
        android:title="@string/action_cotisations_annuelle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_jour_anterieur"
        android:orderInCategory="100"
        android:title="@string/action_jour_anterieur"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_collecte_journaliere"
        android:orderInCategory="100"
        android:title="@string/action_collecte_journaliere"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_divers"
        android:visible="true"
        android:orderInCategory="100"
        android:titleCondensed="@string/action_divers"
        android:title="@string/action_divers"
        android:enabled="true">
        <menu>
            <item
                android:id="@+id/action_add_vente_produit"
                android:title="@string/action_add_vente_produit">
            </item>
            <item
                android:id="@+id/action_list_vente_produits"
                android:title="@string/action_list_operation_externe">
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/action_cloturer_la_journee"
        android:orderInCategory="100"
        android:title="@string/action_cloturer_la_journee"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>