<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_create_guichet" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_create_produit" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_create_user_on_guichet" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_parametrage_general_caisse" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>