<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:visible="false"
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />

    <item
        android:visible="false"
        android:id="@+id/action_all"
        android:title="@string/action_all"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_to_affect"
        android:orderInCategory="100"
        android:title="@string/action_membre_to_affect_gx"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_already_affect"
        android:orderInCategory="100"
        android:title="@string/action_membre_already_affect_gx"
        app:showAsAction="never" />
</menu>